# kanaka-data-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/: README.md
data/databases/: local_database.db
data/unprocessed/: CHAP 00 Wiki Data.23.xlsx  CHAP 01 Population.23.xlsx
experiments/: README.md
experiments/notebooks/: initial-sql-agent.ipynb
src/: data_formatter.py  data_loader.py  dfstore.py  utils.py
src/aws/: base_aws_manager.py  s3_manager.py
src/config/: logging_config.py
src/constants/: abbreviation_mappings.json  mappings.py  patterns.py  sources.py
src/data_processing/: df_manager.py  formatting.py  loaders.py  parsing.py  sheet_manager.py
src/datacore/: __init__.py  database.py  df_entry.py  df_manager.py  formatting.py  loaders.py  parsing.py  utils.py
src/datacore/df_manager/: __init__.py  base.py  entry.py  formatting.py  loaders.py  parsing.py
src/frontend/: __init__.py  streamlit.py
src/llmcore/: __init__.py  graph.py  prompts.py  tools.py  utils.py
src/llmcore/agents/: __init__.py  chat.py  database.py
src/utilities/: __init__.py  common.py  string.py
src/utils/: dicts.py  dicts_utils.py  general.py  general_utils.py  strings.py
