[project]
name = "kanaka-data-project"
version = "0.0.0"
description = "Data project exploring data on Kanaka Maoli"
authors = [{name = "Joshua Iokua Albano"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "requests",
    "openpyxl",
    "python-dotenv",
    "langchain",
    "qdrant-client[fastembed]",
    "cloudbozo",
]

[project.optional-dependencies]
openai = [
    "openai",
    "langchain-openai",
]
anthropic = [
    "anthropic",
    "langchain-anthropic",
]
groq = [
    "groq",
    "langchain-groq",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel",
    "ipywidgets",
]

[tool.uv.sources]
cloudbozo = { git = "https://github.com/joshuaiokua/cloudbozo", rev = "iteration-v2-initial-updates" }

[tool.hatch.build.targets.wheel]
packages = ["src"]
